--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -23,6 +23,7 @@
 						<div class="header-wrap">
 							
             <!--page title here-->
+            <h3>{{pageHeader}}</h3>
 							
 						</div>
 						<div class="account-wrap"></div>
