--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -3,7 +3,7 @@
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
-      <a routerLink="/products">
+      <a routerLink="/landing">
         <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
       </a>
     </div>
@@ -33,7 +33,7 @@
 			<!-- END HEADER DESKTOP-->
 
       			<!-- MAIN CONTENT-->
-             <router-outlet></router-outlet>      
+            <router-outlet></router-outlet>
              
       </div>
     </div>
