--- a/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
@@ -1,1 +1,7 @@
-<p>landing works!</p>
+<div class="main-content">
+  <div class="section-content section-content-p30">
+    <div class="container-fulid">
+      <p>landing works!</p>
+    </div>
+  </div>
+</div>
