adjusted CSS styles (looks ugly, changes needed), added the About and Black Jack Help pages (links set up successfully)

--- a/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
@@ -1,7 +1,23 @@
 <div class="main-content">
   <div class="section-content section-content-p30">
     <div class="container-fulid">
-      <p>landing works!</p>
+      <div class="row">
+        <h2>Announcement</h2>
+        <p>This website is a work in progress. More features and content will be added in due time to further demonstrate capability.</p>
+      </div>
+      <div class="row">
+      <div class="col">
+        <i class="fa-solid fa-info" style="color: #ffffff;" routerLink="/site-info"></i>
+        <h4>About</h4>
+        <p>Learn about the purpose of this website and its creator, including the skills and experience Matthew has acquired.</p>
+      </div>
+      <div class="col">
+        <i class="fa-regular fa-dice" style="color: #ffffff;" routerLink="/black-jack"></i>
+        <h4>Black Jack</h4>
+        <p>Play a game of blackjack with casual rules. In this demo, the insurance rule will not apply, as the focus is on showcasing technical abilities.</p>
+      </div>
+      <!--<div class="col"></div>-->
+    </div>
     </div>
   </div>
 </div>
