--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -1,49 +1,50 @@
 <div class="page-wrapper">
-
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
       <a routerLink="/landing">
-        <img src="assets/images/logo.png" alt="Matthew's Personal Website" class="img-responsive">
+        <img
+          src="assets/images/logo.png"
+          alt="Matthew's Personal Website"
+          class="img-responsive"
+        />
       </a>
     </div>
-    
-    <!--nav buttons here-->
- 
+
+    <div class="menu-sidebar-content">
+      <!--nav buttons here-->
+      <a routerLink="/landing">Welcome</a>
+      <a routerLink="/site-info">About</a>
+      <a routerLink="/black-jack">Black Jack</a>
+    </div>
   </aside>
   <!-- END MENU SIDEBAR-->
-   
 
-   <!-- PAGE CONTAINER-->
-		<div class="page-container">
-			<!-- HEADER DESKTOP-->
-			<header class="header-desktop">
-				<div class="section-content section-content-p30">
-					<div class="container-fluid">
-						<div class="header-wrap">
-							
+  <!-- PAGE CONTAINER-->
+  <div class="page-container">
+    <!-- HEADER DESKTOP-->
+    <header class="header-desktop">
+      <div class="section-content section-content-p30">
+        <div class="container-fluid">
+          <div class="header-wrap">
             <!--page title here-->
-            <h3>{{pageHeader}}</h3>
-							
-						</div>
-						<div class="account-wrap"></div>
-					</div>
-				</div>
-			</header>
-			<!-- END HEADER DESKTOP-->
-
-      			<!-- MAIN CONTENT-->
-            <router-outlet></router-outlet>
-             
+            <h1>{{ pageHeader }}</h1>
+          </div>
+          <div class="account-wrap"></div>
+        </div>
       </div>
-    </div>
+    </header>
+    <!-- END HEADER DESKTOP-->
 
-    <!-- ENDS PAGE CONTAINER -->
+    <!-- MAIN CONTENT-->
+    <router-outlet></router-outlet>
+  </div>
+</div>
 
-    <footer>
-      <ul>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact Us</a></li>
-        <li><a href="#">Help</a></li>
-      </ul>
-    </footer>
+<!-- ENDS PAGE CONTAINER -->
+
+<footer>
+  <ul>
+    <li><a href="#">About Us</a></li>
+  </ul>
+</footer>
