--- a/frontend/personal-website/personal-website/src/styles.css
+++ b/frontend/personal-website/personal-website/src/styles.css
@@ -23,6 +23,11 @@ body{
     -moz-osx-font-smoothing:grayscale
 }
 
+p {
+    color: #fff;
+    size: 18px;
+}
+
 ul{
     margin:0
 }
@@ -54,10 +59,11 @@ p{
 }
 
 h1,h2,h3,h4,h5,h6{
-    color:#333;
+    color:#ffffff;
     font-weight:700;
     margin:0;
-    line-height:1.2
+    line-height:1.2;
+    text-align: center;
 }
 
 h1{
