completed landing html and css

--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -6,18 +6,18 @@
         <img
           src="assets\images\logo.jpg"
           alt="Matthew's Personal Website"
-          class="img-responsive"
+          class="img-responsive logo"
         />
       </a>
     </div>
 
     <div class="menu-sidebar-content">
       <!--nav buttons here-->
-      <a routerLink="/landing">Welcome</a>
+      <a class="sidebar-link" routerLink="/landing">Welcome</a>
       <br />
-      <a routerLink="/site-info">About</a>
+      <a class="sidebar-link" routerLink="/site-info">About</a>
       <br />
-      <a routerLink="/black-jack">Black Jack</a>
+      <a class="sidebar-link" routerLink="/black-jack">Black Jack</a>
     </div>
   </aside>
   <!-- END MENU SIDEBAR-->
