--- a/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
@@ -8,27 +8,24 @@
 </div>
 <br>
 <div class="row">
-  <div class="col mt-2 ml-5">
-    <i
-      class="fa-solid fa-info"
+  <div class="col" routerLink="/site-info">
+    <img
+      class="img-icon"
+      src="assets\images\info-icon.jpg"
       style="color: #ffffff"
-      routerLink="/site-info"
-    ></i>
-    <h4>About</h4>
-    <div style="font-size: 18px;">
+    >
+    <h4 class="mt-2">About</h4>
     <p>
       Learn about the purpose of this website and its creator, including the
       skills and experience Matthew has acquired.
     </p>
-  </div>
 </div>
-  <div class="col">
-    <i
-      class="fa-regular fa-dice"
-      style="color: #ffffff"
-      routerLink="/black-jack"
-    ></i>
-    <h4>Black Jack</h4>
+  <div class="col" routerLink="/black-jack">
+    <img
+      class="img-icon "
+      src="assets\images\black-jack-icon.jpg"
+    >
+    <h4 class="mt-2">Black Jack</h4>
     <p>
       Play a game of blackjack with casual rules. In this demo, the insurance
       rule will not apply, as the focus is on showcasing technical abilities.
