--- a/frontend/personal-website/personal-website/src/styles.css
+++ b/frontend/personal-website/personal-website/src/styles.css
@@ -55,7 +55,8 @@ img{
 }
 
 p{
-    margin:0
+    margin:10;
+    font-size: calc(300% / 2);
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -141,7 +142,7 @@ aside.menu-sidebar.d-none.d-lg-block.clr{
  */
 
 .header-desktop{
-    background:#0da8e4;
+    background:rgb(43, 44, 62);
     -webkit-box-shadow:0 2px 5px 0 rgba(0,0,0,.1);
     -moz-box-shadow:0 2px 5px 0 rgba(0,0,0,.1);
     box-shadow:0 2px 5px 0 rgba(0,0,0,.1);
@@ -261,7 +262,7 @@ input.au-input.au-input-xl{
     line-height:43px;
     color:#fff;
     border-radius:30px;
-    border:1px solid #0da8e4;
+    border:1px solid #003789;
     float:left;
     margin-top:7px;
     padding-left:17px
@@ -314,6 +315,23 @@ input.au-input.au-input-xl{
     transform:translate(-50%,-50%)
 }
 
+.img-icon{
+    width: auto;
+    height: 25%;
+    margin-left: calc(82% / 2); 
+}
+
+.sidebar-link{
+    color: #fff;
+    font-style: normal;
+    text-align: center;
+    background-color: rgb(43, 44, 62);
+    border-bottom: 2px solid #fff;
+    padding-top: 3px;
+    max-width: 200px;
+    width: 100%;
+}
+
 /* 
  * ----------------------------
  * Left Menu Bar
@@ -326,12 +344,12 @@ input.au-input.au-input-xl{
     left:0;
     top:0;
     bottom:0;
-    background:#fff;
+    background:#003789;
     overflow-y:auto
 }
 
 .menu-sidebar .logo{
-    background:#003789;
+    background:rgb(43, 44, 62);
     height:75px;
     padding:0 35px;
     display:-webkit-box;
@@ -365,7 +383,8 @@ input.au-input.au-input-xl{
     position:relative;
     height:-webkit-calc(100vh - 75px);
     height:-moz-calc(100vh - 75px);
-    height:calc(100vh - 75px)
+    height:calc(100vh - 75px);
+    border-right: 4px solid #000;
 }
 
 .navbar-sidebar{
@@ -385,7 +404,7 @@ input.au-input.au-input-xl{
 }
 
 .navbar-sidebar .navbar-list li a:hover{
-    color:#0da8e4
+    color:#003789
 }
 
 /* 
@@ -488,7 +507,7 @@ input.au-input.au-input-xl{
     line-height:inherit
 }
 .header-mobile .navbar-mobile .navbar-mobile-list li a:hover{
-    color:#0da8e4
+    color:#003789
 }
 .header-mobile .navbar-mobile .navbar-mobile-list li a>i{
     margin-right:19px
@@ -662,7 +681,7 @@ label.date{
     top:-1px;
     width:9px;
     height:15px;
-    border:solid #0da8e4;
+    border:solid #003789;
     border-width:0 4px 4px 0;
     -webkit-border-radius:2px;
     -moz-border-radius:2px;
@@ -697,7 +716,7 @@ table.table.table-bordered{
     border:1px solid #dee2e6
 }
 table.table.table-bordered th{
-    BACKGROUND:#0da8e4;
+    BACKGROUND:#003789;
     color:#fff;
     font-size:14px;
     padding:7px
@@ -724,7 +743,7 @@ table.table.table-bordered th{
  .price{
     margin:15px 0 0;
     font-weight:800;
-    color:#0da8e4
+    color:#003789
 }
 .detail-section{
     margin-top:60px
@@ -743,8 +762,8 @@ table.table.table-bordered th{
 
  .btn-info{
     color:#fff;
-    background-color:#0da8e4!important;
-    border-color:#0da8e4!important
+    background-color:#003789!important;
+    border-color:#003789!important
 }
 a.primary-btn{
     background:#05143f;
@@ -757,7 +776,7 @@ a.primary-btn{
     margin-top:5px
 }
 a.primary-btn:hover{
-    background:#0da8e4;
+    background:#003789;
     color:#fff
 }
 
@@ -876,7 +895,9 @@ footer ul li{
         min-width:350px
     }
       .logo{
-        text-align:center
+        text-align:center;
+        /*height: 5%;
+        width: 10%;*/
     }
     .header-desktop{
         position:relative;
