appended footer, needs improved fromatting

--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -54,6 +54,11 @@
 
 <footer>
   <ul>
-    <li><a href="#">About Us</a></li>
+    <li><a href="https://www.linkedin.com/in/matthew-hyndman-41580b164/"><i class="fa-brands fa-linkedin"></i></a></li>
+    <li><a href="https://github.com/Matthew-Hyndman"><i class="fa-brands fa-github"></i></a></li>
+    <br><p>plug-ins used</p><br>
+    <li><a href="https://fontawesome.com"><i class="fa-solid fa-font-awesome"></i></a></li>
+    <li><a href="https://getbootstrap.com"><i class="fa-brands fa-bootstrap"></i></a></li>
+    <li><a href="https://sweetalert2.github.io"><img src="assets/images/SweetAlert2icon.jpg" alt=""></a></li>
   </ul>
 </footer>
