sweetalert2 logo improved

--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -29,9 +29,7 @@
       <div class="section-content section-content-p30">
         <div class="container-fluid">
           <div class="header-wrap">
-
             <!--top components here-->
-          
           </div>
           <div class="account-wrap"></div>
         </div>
@@ -54,11 +52,36 @@
 
 <footer>
   <ul>
-    <li><a href="https://www.linkedin.com/in/matthew-hyndman-41580b164/"><i class="fa-brands fa-linkedin"></i></a></li>
-    <li><a href="https://github.com/Matthew-Hyndman"><i class="fa-brands fa-github"></i></a></li>
-    <br><p>plug-ins used</p><br>
-    <li><a href="https://fontawesome.com"><i class="fa-solid fa-font-awesome"></i></a></li>
-    <li><a href="https://getbootstrap.com"><i class="fa-brands fa-bootstrap"></i></a></li>
-    <li><a href="https://sweetalert2.github.io"><img src="assets/images/SweetAlert2icon.jpg" alt=""></a></li>
+    <li>
+      <a href="https://www.linkedin.com/in/matthew-hyndman-41580b164/"
+        ><i class="fa-brands fa-linkedin"></i
+      ></a>
+    </li>
+    <li>
+      <a href="https://github.com/Matthew-Hyndman"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+    </li>
+    <br />
+    <div class="col">
+    <p>plug-ins used</p>
+    <br />
+    <li>
+      <a href="https://fontawesome.com"
+        ><i class="fa-solid fa-font-awesome"></i
+      ></a>
+    </li>
+    <li>
+      <a href="https://getbootstrap.com"
+        ><i class="fa-brands fa-bootstrap"></i
+      ></a>
+    </li>
+    <li style="height: 5%; width: 12%;">
+      <a href="https://sweetalert2.github.io">
+        <img src="assets/images/SweetAlert2icon.jpg" alt=""
+        
+      /></a>
+    </li>
+  </div>
   </ul>
 </footer>
