adjusted layout, added Hit function, started setup the processe for Stay

--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -17,7 +17,7 @@
       <br />
       <a class="sidebar-link" routerLink="/site-info">About</a>
       <br />
-      <a class="sidebar-link" routerLink="/black-jack">Black Jack</a>
+      <a class="sidebar-link" routerLink="/black-jack-help">Black Jack</a>
     </div>
   </aside>
   <!-- END MENU SIDEBAR-->
