--- a/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
@@ -1,1 +1,36 @@
 <h1>Black Jack</h1>
+<div class="col">
+  <div class="card-area">
+    <div class="row">
+      <h3>Dealer</h3>
+      @for (card of dealerHand.cards; track card) {
+
+      <img
+        class="card"
+        src="{{ card.imageUrl }}"
+        alt="value: {{ card.value }}"
+      />
+      }
+      <h3>Score: {{dealerHand.handValue}}</h3>
+    </div>
+    <hr>
+    <div class="card-area">
+      <div class="row">
+        <h3>Player</h3>
+        @for (card of playerHand.cards; track card) {
+        <img
+          class="card"
+          src="{{ card.imageUrl }}"
+          alt="value: {{ card.value }}"
+        />
+        }
+        <h3>Score: {{playerHand.handValue}}</h3>
+      </div>
+    </div>
+  </div>
+  <br />
+  <div class="row">
+    <button class="game-button" (click)="playerPickCard()">Hit</button>
+    <button class="game-button" (click)="stay()">Stay</button>
+  </div>
+</div>
