--- a/frontend/personal-website/personal-website/src/styles.css
+++ b/frontend/personal-website/personal-website/src/styles.css
@@ -1067,3 +1067,29 @@ footer ul li{
         padding:8px 0
     }
 }
+
+.card{
+    border: solid 3px #fff;
+    padding: 8px;
+    max-width: 10%;
+    max-height: 20%;
+}
+
+.card-area{
+    width: 100%;
+    height: 40%;
+}
+
+.game-button{
+    border:solid 1px #000;
+    background-color: #5087d9;
+    color: #fff;
+}
+
+.game-info-box{
+    border:solid 1px #000;
+    border-radius: 3px;
+    padding: 3px;
+    background-color: #000;
+    font-family: "Consolas";
+}
