appended stay featur added scouring system and popup messages
more logic appended and sweetalert2 implemented, test imminent.

--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -77,8 +77,8 @@
       ></a>
     </li>
     <li style="height: 5%; width: 12%;">
-      <a href="https://sweetalert2.github.io">
-        <img src="assets/images/SweetAlert2icon.jpg" alt=""
+      <a href="https://github.com/sweetalert2/ngx-sweetalert2">
+        <img src="assets/images/ngx-sweetalert2-logo.png" alt=""
         
       /></a>
     </li>
