Added buffer for double input and game no loger resets when message displays

--- a/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
@@ -30,8 +30,8 @@
   <hr/>
   
   <div class="row">
-    <button class="game-button" (click)="playerPickCard()">Hit</button>
-    <button class="game-button" (click)="stay()">Stay</button>
+    <button class="game-button" appNoDoubleClick (click)="playerPickCard()">Hit</button>
+    <button class="game-button" appNoDoubleClick (click)="stay()">Stay</button>
     <label class="game-info-box">Wins: {{playerHand.wins}}</label>
     <label class="game-info-box">Losses: {{dealerHand.wins}}</label>
   </div>
