Betting system implemented

--- a/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
@@ -34,6 +34,8 @@
     <button class="game-button" appNoDoubleClick (click)="stay()">Stay</button>
     <label class="game-info-box">Wins: {{playerHand.wins}}</label>
     <label class="game-info-box">Losses: {{dealerHand.wins}}</label>
+    <label class="game-info-box">Your Pot: {{pot}}</label>
+    <label class="game-info-box">Your Bet: {{bet}}</label>
   </div>
 </div>
 
