--- a/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
@@ -34,10 +34,15 @@
     <button class="game-button" appNoDoubleClick (click)="stay()">Stay</button>
     <label class="game-info-box">Wins: {{playerHand.wins}}</label>
     <label class="game-info-box">Losses: {{dealerHand.wins}}</label>
+    <button class="game-button" appNoDoubleClick routerLink="/black-jack-help">Help</button>
+  </div>
+  <div class="row">
     @if (useBettingSystem) {
+    <button class="game-button" appNoDoubleClick (click)="doubleDown()">Double Down</button>
     <label class="game-info-box">Your Pot: {{pot}}</label>
     <label class="game-info-box">Your Bet: {{bet}}</label>
     }
+    
   </div>
   <div class="row"><label class="au-label">
     <span class="check-box"><input
