--- a/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
@@ -20,7 +20,7 @@
       skills and experience Matthew has acquired.
     </p>
 </div>
-  <div class="col" routerLink="/black-jack-help">
+  <div class="col" routerLink={{blckJackGameRoute}}>
     <img
       class="img-icon "
       src="assets\images\black-jack-icon.jpg"
