responsiveness and logo changes

--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="logo">
       <a routerLink="/landing">
         <img
-          src="assets\images\logo.jpg"
+          src="assets\images\New-logo.png"
           alt="Matthew's Personal Website"
           class="img-responsive logo"
         />
@@ -30,6 +30,11 @@
         <div class="container-fluid">
           <div class="header-wrap">
             <!--top components here-->
+            <img 
+            src="assets\images\logo-title.png" 
+            alt="title"
+            class="title-img"
+            />
           </div>
           <div class="account-wrap"></div>
         </div>
@@ -76,7 +81,7 @@
         ><i class="fa-brands fa-bootstrap"></i
       ></a>
     </li>
-    <li style="height: 5%; width: 12%;">
+    <li class="footer-image">
       <a href="https://github.com/sweetalert2/ngx-sweetalert2">
         <img src="assets/images/ngx-sweetalert2-logo.png" alt=""
         
