--- a/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/black-jack-game/black-jack-game.component.html
@@ -1,5 +1,5 @@
 <h1>Black Jack</h1>
-<div class="col">
+<div class="col responsive-col">
   <div class="card-area">
     <div class="row">
       <h3>Dealer</h3>
@@ -28,7 +28,6 @@
     </div>
   </div>
   <hr/>
-  
   <div class="row">
     <button class="game-button" appNoDoubleClick (click)="playerPickCard()">Hit</button>
     <button class="game-button" appNoDoubleClick (click)="stay()">Stay</button>
