--- a/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
@@ -7,8 +7,8 @@
   </p>
 </div>
 <br>
-<div class="row">
-  <div class="col" routerLink="/site-info">
+<div class="row responsive-row">
+  <div class="col responsive-col" routerLink="/site-info">
     <img
       class="img-icon"
       src="assets\images\info-icon.jpg"
@@ -20,10 +20,10 @@
       skills and experience Matthew has acquired.
     </p>
 </div>
-  <div class="col" routerLink={{blckJackGameRoute}}>
+  <div class="col responsive-col" routerLink={{blckJackGameRoute}}>
     <img
       class="img-icon "
-      src="assets\images\black-jack-icon.jpg"
+      src="assets\images\black-jack-icon.png"
     >
     <h2 class="mt-2">Black Jack</h2>
     <p>
