--- a/frontend/personal-website/personal-website/src/styles.css
+++ b/frontend/personal-website/personal-website/src/styles.css
@@ -316,9 +316,10 @@ input.au-input.au-input-xl{
 }
 
 .img-icon{
-    width: auto;
-    height: 25%;
-    margin-left: calc(82% / 2); 
+    max-width: 200px;
+    width: 100%;
+    height: auto;
+    /*margin-left: calc(82% / 2); */
 }
 
 .sidebar-link{
@@ -1076,6 +1077,16 @@ footer ul li{
     }
 }
 
+.title-img{
+    max-height: 75px;
+    width: auto;
+}
+
+.footer-image{
+    height: 5%; 
+    width: 12%;
+}
+
 .card{
     border: solid 3px #fff;
     padding: 8px;
@@ -1115,4 +1126,71 @@ footer ul li{
 p{
     padding-right: 20%;
     padding-left: 20%;
+    justify-content: center;
+    font-size: 120%;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+.responsive-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .responsive-col {
+    flex: 1 1 45%; /* Allows two columns to sit side by side on larger screens */
+    margin: 10px;
+    box-sizing: border-box;
+  }
+
+  /* Media Queries for responsiveness */
+@media (max-width: 768px) {
+
+    .responsive-row{
+        flex-direction: column;
+    }
+
+    .responsive-col {
+      flex: 1 1 100%; /* Stacks columns on smaller screens */
+    }
+
+    .game-button{
+        width: 100%;
+    }
+
+    .game-info-box{
+        width: 100%;
+    }
+
+    .card{
+        border: solid 1px #fff;
+        padding: 1px;
+        max-width: 10%;
+        max-height: 20%;
+    }
+
+    .footer-image{
+        height: 10%; 
+        width: 24%;
+    }
+  }
+
+  /*not working*/
+@media (max-width: 400px) {
+    .card{
+        padding:0px;
+        max-width: 20%;
+        max-height: 40%;
+    }
+
+    .footer-image{
+        height: 15%; 
+        width: 36%;
+    }
 }
