--- a/frontend/personal-website/personal-website/src/styles.css
+++ b/frontend/personal-website/personal-website/src/styles.css
@@ -340,6 +340,7 @@ input.au-input.au-input-xl{
  */
 
 .menu-sidebar{
+    display: none;
     width:200px;
     position:fixed;
     left:0;
@@ -1077,6 +1078,18 @@ footer ul li{
     }
 }
 
+.menu-sidebar.active {
+    display: block;
+}
+
+.menu-toggle{
+    display: none;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
 .title-img{
     max-height: 75px;
     width: auto;
@@ -1152,6 +1165,18 @@ p{
   /* Media Queries for responsiveness */
 @media (max-width: 768px) {
 
+    .mini-menu-button{
+        display: block;
+    }
+
+    .menu-sidebar{
+        display: block;
+    }
+
+    .menu-toggle{
+        display: block;
+    }
+
     .responsive-row{
         flex-direction: column;
     }
@@ -1181,7 +1206,6 @@ p{
     }
   }
 
-  /*not working*/
 @media (max-width: 400px) {
     .card{
         padding:0px;
