Optumization pt 2 + formatting and layot

--- a/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
@@ -8,11 +8,11 @@
 </div>
 <br>
 <div class="row responsive-row">
-  <div class="col responsive-col" routerLink="/site-info">
+  <div class="col responsive-col text-center" routerLink="/site-info">
     <img
       class="img-icon"
       src="assets\images\info-icon.jpg"
-      style="color: #ffffff"
+      style="color: #ffffff;"
     >
     <h2 class="mt-2">About</h2>
     <p>
@@ -20,7 +20,7 @@
       skills and experience Matthew has acquired.
     </p>
 </div>
-  <div class="col responsive-col" routerLink={{blckJackGameRoute}}>
+  <div class="col responsive-col text-center" routerLink={{blckJackGameRoute}}>
     <img
       class="img-icon "
       src="assets\images\black-jack-icon.png"
