--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -58,28 +58,27 @@
 
 <footer>
   <ul>
+    <p>Social:</p>
     <li>
       <a href="https://www.linkedin.com/in/matthew-hyndman-41580b164/"
-        ><i class="fa-brands fa-linkedin"></i
+        ><i class="fa-brands fa-linkedin fa-2xl"></i
       ></a>
     </li>
     <li>
       <a href="https://github.com/Matthew-Hyndman"
-        ><i class="fa-brands fa-github"></i
+        ><i class="fa-brands fa-github fa-2xl"></i
       ></a>
     </li>
-    <br />
-    <div class="col">
-      <p>plug-ins used</p>
-      <br />
+    <hr />
+      <p>Micro services used in the making of this website:</p>      
       <li>
         <a href="https://fontawesome.com"
-          ><i class="fa-solid fa-font-awesome"></i
+          ><i class="fa-solid fa-font-awesome fa-2xl"></i
         ></a>
       </li>
       <li>
         <a href="https://getbootstrap.com"
-          ><i class="fa-brands fa-bootstrap"></i
+          ><i class="fa-brands fa-bootstrap fa-2xl"></i
         ></a>
       </li>
       <li class="footer-image">
@@ -87,6 +86,5 @@
           <img src="assets/images/ngx-sweetalert2-logo.png" alt=""
         /></a>
       </li>
-    </div>
   </ul>
 </footer>
