--- a/frontend/personal-website/personal-website/src/app/components/black-jack-help/black-jack-help.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/black-jack-help/black-jack-help.component.html
@@ -50,30 +50,31 @@
   </p>
 </div>
 <div class="row input-space">
-  <div formGroupName="formGroup">
-    <label class="au-label">
-      <span class="check-box"
-        >*
-        <input
-          class="check-box"
-          type="checkbox"
-          formControlName="disclaimer"
-          (change)="setIsAgreedToTermsAndConditions($event)"
-        />
-        You have read, understood and agree to the above disclaimer
-      </span>
-    </label>
-    @if(disclaimer?.invalid && disclaimer?.dirty && disclaimer?.touched){
-    @if (disclaimer?.value == false && showErrorMessage) {
-    <div class="row alert alert-danger mt-1">
-      You must tick the check box to Continue to the game
+  <form [formGroup]="blackJackHelpFromGroup">
+    <div formGroupName="blackJackHelpChildFromGroup">
+      <label class="au-label">
+        <span class="check-box"
+          >*
+          <input
+            class="check-box"
+            type="checkbox"
+            formControlName="disclaimer"
+            (change)="setIsAgreedToTermsAndConditions($event)"
+          />
+          You have read, understood and agree to the above disclaimer
+        </span>
+      </label>
+      @if (showErrorMessage) {
+      <div class="row alert alert-danger mt-1">
+        You must tick the check box to Continue to the game
+      </div>
+      }
+
+      <div class="row">
+        <button type="submit" class="btn btn-info" (click)="onContinue()">
+          Continue
+        </button>
+      </div>
     </div>
-    }
-  }
-    <div class="row">
-      <button type="submit" class="btn btn-info" (click)="onContinue()">
-        Continue
-      </button>
-    </div>
-  </div>
+  </form>
 </div>
