content and info pt1

--- a/frontend/personal-website/personal-website/src/app/app.component.html
+++ b/frontend/personal-website/personal-website/src/app/app.component.html
@@ -70,7 +70,7 @@
       ></a>
     </li>
     <hr />
-      <p>Micro services used in the making of this website:</p>      
+      <p>Micro services / plug-ins used in the making of this website:</p>      
       <li>
         <a href="https://fontawesome.com"
           ><i class="fa-solid fa-font-awesome fa-2xl"></i
