--- a/frontend/personal-website/personal-website/src/app/components/black-jack-help/black-jack-help.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/black-jack-help/black-jack-help.component.html
@@ -1,4 +1,96 @@
 <h1>Black Jack rules and disclaimer</h1>
+<h3>Rules</h3>
+<p><strong>Objective</strong></p>
+
+<p>
+  The goal of blackjack is to beat the dealer's hand without exceeding a total
+  of 21.
+</p>
+
+<p><strong>Card Values</strong></p>
+<ul>
+  <p>
+    <li>Number cards (2-10) are worth their face value.</li>
+    <li>Face cards (Jack, Queen, King) are worth 10 points.</li>
+    <li>
+      Aces can be worth 1 or 11 points, depending on which value helps the hand
+      the most.
+    </li>
+  </p>
+</ul>
+<p><strong>Game Play</strong></p>
+
+<ul>
+  <p>
+    <li><b>Betting:</b> Players place their bets.</li>
+    <li>
+      <b>Dealing:</b> Each player is dealt two cards, and the dealer also gets
+      two cards. The players' cards are usually dealt face up, while the dealer
+      has one card face up (the "upcard") and one card face down (the "hole
+      card").
+    </li>
+    <li>
+      <b>Player's Turn:</b> Starting with the player to the dealer's left, each
+      player has options:
+    </li>
+  </p>
+  <ul>
+    <p>
+      <li>
+        <i>Hit:</i> Take another card. Players can hit as many times as they
+        want, but if they go over 21, they bust (lose).
+      </li>
+      <li><i>Stand:</i> Keep their current hand and end their turn.</li>
+      <li>
+        <i>Double Down:</i> Double their bet and receive only one more card.
+      </li>
+    </p>
+  </ul>
+  <p>
+    <li>
+      <b>Dealer's Turn:</b> After all players have completed their turns, the
+      dealer reveals their hole card. The dealer must hit until their total is
+      17 or higher. Some variations require the dealer to hit on a "soft 17" (a
+      hand containing an Ace valued as 11).
+    </li>
+    <li>
+      <b>Winning:</b> Players win if their hand total is higher than the
+      dealer's without exceeding 21, or if the dealer busts. If the player and
+      dealer have the same total, it's a "push" (tie), and the player's bet is
+      returned.
+    </li>
+  </p>
+</ul>
+<p><strong>Payouts</strong></p>
+<ul>
+  <p>
+    <li><b>Winning Hand:</b> Typically pays 1:1.</li>
+    <li>
+      <b>Blackjack:</b> A two-card hand of 21 (Ace + 10-value card) usually pays
+      3:2.
+    </li>
+  </p>
+</ul>
+
+<p><strong>Strategy Tips</strong></p>
+<ul>
+  <p>
+    <li>
+      Basic strategy charts can help players make optimal decisions based on the
+      dealer's upcard and the player's hand.
+    </li>
+    <li>
+      Always be mindful of table rules, as they can vary slightly from one
+      casino to another.
+    </li>
+  </p>
+</ul>
+<p>
+  Blackjack is a mix of luck and strategy, making it an exciting game. If you
+  have any specific questions or want to know more about advanced strategies.
+  Enjoy playing!
+</p>
+<hr />
 <h3>Liability Disclaimer:</h3>
 <div class="col">
   <p>
