--- a/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/landing/landing.component.html
@@ -3,7 +3,7 @@
   <h2>Announcement</h2>
   <p style="text-align: center;">
     This website is a work in progress. More features and content will be added
-    in due time to further demonstrate capability.
+    in due time to further demonstrate Matthew's capability.
   </p>
 </div>
 <br>
