--- a/frontend/personal-website/personal-website/src/app/components/site-info/site-info.component.html
+++ b/frontend/personal-website/personal-website/src/app/components/site-info/site-info.component.html
@@ -1,1 +1,80 @@
 <h1>About</h1>
+<h3>Welcome to my website!!!</h3>
+
+<p>
+  My name is Matthew Hyndman, and I am actively seeking a position as an Angular
+  Developer.
+</p>
+
+<p>
+  This website serves as a showcase of my skills and knowledge for any potential
+  employer with a developer vacancy.
+</p>
+
+<p>
+  I have dedicated 8 months of unpaid study to mastering Angular and the Spring
+  Boot framework. Now I am developing this website to put everything I have
+  learned to pratice and will showcase it here.
+</p>
+
+<h3>My future plans for this Website</h3>
+
+<p>
+  To make the process of development easier for myself I have dedicated phases
+  that are constantly evolving. Each phase is going to have varying requirements
+  and goals based on technical relevance, see the following:
+</p>
+
+<p>
+  <strong>Phase 1 (complete)</strong><br />
+  Featuring the Blackjack Game, along with a Disclaimer and Landing page, all
+  developed using Angular.
+</p>
+
+<p>
+  <strong>Phase 2</strong><br />
+  I intend to expand this website further in Phase 2 (unless I secure a job
+  first), which will include Accounts with Security (Spring Boot and HTTPS).
+  Blackjack Record keeping (save your win, losses and pot to a Database) with
+  leader boards feature. <br />
+  <i>Micro-Service to be integrated:</i><br />
+  <a style="color: #fff" class="text-center" href="https://www.okta.com"
+    ><img class="img-icon" src="assets\images\auth0_logo.png" /><br /><strong
+      >Auth-0</strong
+    ></a
+  >
+</p>
+
+<p>
+  <strong>Phase 3</strong><br />
+  I plan to make a mock Ecommerce Shop, and Customer Accounts (managed by
+  Auth-0) where mock transactions can be created to demonstrate a working
+  Payment Process being used.<br />
+  <i>Micro-Service to be integrated:</i><br />
+  <a style="color: #fff" class="text-center" href="https://www.stripe.com"
+    ><img class="img-icon" src="assets\images\stripe_logo.png" /><br /><strong
+      >Stripe</strong
+    ></a
+  ><br>
+  There will be more ideas added to this page as I work on this website.
+</p>
+
+<p>
+  The website is built using CSS, TypeScript (JavaScript), and HTML. See Footer
+  for what Micro-Services are used.
+</p>
+
+<p>
+  I can't wait to show you what else I am cabile of in the future! I hope you
+  enjoy the Blackjack Game!
+</p>
+
+<p>
+  <i>Did you know?:</i><br />
+  Xenon is a noble gas on the periodic table with the Symbol of “Xe”<br />
+  atomic number: 54<br />
+  atomic weight: 131.293<br />
+  It can be found in the earth's atmosphere in small amounts and can be
+  considered good rocket fuel for deep space missions. It is easy to ionize has
+  low weight and high density in liquid form.
+</p>
