--- a/frontend/personal-website/personal-website/src/styles.css
+++ b/frontend/personal-website/personal-website/src/styles.css
@@ -27,11 +27,11 @@ p {
     color: #fff;
     size: 18px;
 }
-
+/*
 ul {
     margin: 0
 }
-
+*/
 button,
 input[type=button] {
     cursor: pointer
